Fix button--outline hover color dark mode

--- a/packages/lexical-website-new/src/css/custom.css
+++ b/packages/lexical-website-new/src/css/custom.css
@@ -40,3 +40,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 .footer__links {
   margin-bottom: 3rem;
 }
+
+.button--outline:hover {
+  color: white;
+}
